Fix nav z-index and style background img.

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -22,6 +23,7 @@ nav {
   width: 100%;
   margin: 0 auto;
   transition: all 0.3s ease;
+  z-index: 100;
 }
 
 nav.scrolled {
@@ -58,18 +60,10 @@ nav.scrolled {
 .lines {
   display: none;
   cursor: pointer;
-  margin: 0 40px 0 0;
 }
 
 .side-bar {
-  position: fixed;
-  top: 0;
-  left: -270px;
-  z-index: 10;
-  height: 100%;
-  width: 270px;
-  background: #FE5151;
-  transition: all 0.3s ease;
+  display: none;
 }
 
 .side-bar ul {
@@ -97,6 +91,8 @@ nav.scrolled {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative;
 }
 
 .header-text-box {
@@ -147,6 +143,50 @@ nav.scrolled {
   animation-duration: 4s;
 }
 
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(0px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 /* Media Queries */
 @media only screen and (max-width: 825px) {
   .lines {
@@ -165,7 +205,20 @@ nav.scrolled {
     border-radius: 3px;
   }
 
+  .side-bar {
+    display: block;
+    position: fixed;
+    top: 0px;
+    left: -270px;
+    height: 100%;
+    width: 270px;
+    transition: all 0.3s ease;
+    background: #FE5151;
+    z-index: 12;
+  }
+
   .header-text-box {
     left: 50%;
+    width: 90%;
   }
 }
